20.feg (ws)
      - more debugging for parts
      - save only style values which differ from default build in style
19.feb (tb)
      - update French translation file from JLWaltener
      - update Dutch instrument from Jaap Plaisier
       (ws)
      - new internal handling of styles parameter
      - better stem len calculation in beams
17.feb (ws)
      - fix: advance cursor after entering rest in note entry mode
      - Introduce "simple text", which contains only one text fragment with
        same font as associated style. This kind of text is saved as simple text
        string instead of html. "Simple text" changes if the associated text style
        changes.
16.feb (tb)
      - adding danish translation file
       (ws)
      - fix instrument patch names in mixer
      - change size of dynamics characters (psfz) to make them better mix with
        normal fonts. This may be incompatible with older scores.
      - text style changes update text
      - separate subtype from textStyle for Text() objects
15.feb (ws)
      - instrument name font size depends on spatium
      - drag&drop of dynamics to notes/rests
      - more strings are now translatable
      - save applications settings on windows in *.ini file instead of registry
        (%APPDATA%\MusE\MuseScore.ini)
      - allow image extension names (*.jpg etc.) in upper and lower case.
      - redesign of "recent scores" list and session management; this should fix
        another startup crash
      (db)
      - update French instrument file from JLWaltener
      - update Dutch translation from Jaap Plaisier
14.feb (ws)
      - update italian instrument file from César Penagos
      - fixed crash when creating excerpts from staff > 1 and with slurs
      - added separate text styles for even/odd lyrics lines
      - script debugger can now enabled/disabled with check button in Help menu
        instead via command line option. Command line option sets default.
13.feb (ws)