@@ -321,10 +321,8 @@ void Score::collectMeasureEvents(EventMap* events, Measure* m, int staffIdx,
                         }
                   if (tiedNote)
                         len = len - lastNoteLen + ((lastNoteLen * gateTime) / 100 - 1);
-                  else {
-printf("len %d = (len %d * gateTime %d)/100\n", len, (len * gateTime)/100-1, gateTime);
+                  else
                         len = (len * gateTime) / 100 - 1;
-                        }
                   collectChord(events,
                      instr,
                      pitchOffset + ottavaShift,
