@@ -18,17 +18,21 @@
 #  Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 #=============================================================================
 
-#set(CMAKE_CXX_FLAGS         "-g -Wall -Wextra -Winvalid-pch -fvisibility=hidden -fvisibility-inlines-hidden -DQT_STATICPLUGIN")
 set(CMAKE_CXX_FLAGS_RELEASE "-O3 -DQT_NO_DEBUG")
 set(CMAKE_CXX_FLAGS_DEBUG   "-DQT_DEBUG")
 
 if (STATIC_SCRIPT_BINDINGS)
-      set(CMAKE_CXX_FLAGS "-g -Wall -Wextra -Winvalid-pch -DQT_STATICPLUGIN")
+      set(CMAKE_CXX_FLAGS "-g -Wall -Wextra -Winvalid-pch -fno-rtti -DQT_STATICPLUGIN")
       set(LIBTYPE "STATIC")
 else (STATIC_SCRIPT_BINDINGS)
-      set(CMAKE_CXX_FLAGS "-g -Wall -Wextra -Winvalid-pch")
+      set(CMAKE_CXX_FLAGS "-g -Wall -Wextra -Winvalid-pch -fno-rtti")
       set(LIBTYPE "SHARED")
 endif (STATIC_SCRIPT_BINDINGS)
+
+if (GCC_VISIBILITY)
+      set(CMAKE_CXX_FLAGS, ${CMAKE_CXX_FLAGS} "-fvisibility=hidden -fvisibility-inlines-hidden")
+endif (GCC_VISIBILITY)
+
 
 include_directories(${QT_INCLUDES})
 
